tests/NormalTests/paczka1/fuzzy1/85064156.err
Error in line 7: einL0 A587 32,6
Error in line 9: einL0 S481 62,1
Error in line 10: einL0 A531 68,7
Error in line 15: yimat1rgKV S481 56,3
Error in line 11: S478 S481 21,3
Error in line 26: S478 A587 11,1
Error in line 31: S478 A531 98,0
Error in line 3: c1uHM9nP A531 29,6
Error in line 29: 1JPw A587 59,7
